# agent-tools

./: .gitignore  MANIFEST.in  README.md  RESTRUCTURE_README.md  agent-tools-debug.sh  agent-tools-mcp.sh  compare_features.py  example_ast_comparison.py  mcp-code-parser-debug.sh  mcp-code-parser.sh  pyproject.toml  remove_rest_components.sh  rename_directories.sh  rename_project.sh  rollback_changes.sh  streamline_mcp.sh  test_mcp_manual.sh  update_imports.sh  update_metadata.sh  validate_changes.sh  value_analysis.md
agent_tools/: __init__.py  api.py  cli.py  utils.py
agent_tools/mcp/: rest_server.py  server.py
agent_tools/parsers/: base.py  languages.py  tree_sitter_parser.py
agenttools/: __init__.py  __version__.py  api.py  cli.py  logging.py
agenttools/mcp/: http_server.py  server.py
agenttools/parsers/: tree_sitter.py
agenttools/rest/: __init__.py  server.py
docs/: logbook.md  mcp-vs-rest.md  openapi.yaml  plan.md  tech-design.md  user-guide.md
examples/: basic_usage.py  mcp_client.py
mcp_code_parser/: __init__.py  __version__.py  api.py  cli.py  logging.py  mcp_http_server.py  mcp_server.py  utils.py
mcp_code_parser/parsers/: tree_sitter.py
tests/: __init__.py  conftest.py  test_api.py  test_cli.py  test_integration.py  test_mcp_protocol.py  test_mcp_server.py  test_parser.py  test_rest_server.py  test_tree_sitter.py  test_tree_sitter_parser.py  test_utils.py
tests/samples/: cpp_complex.cpp  go_complex.go  javascript_complex.js  python_complex.py  typescript_complex.ts
